// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckBox must return the diff between snapshot when checkbox has a defined value or not 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -6,11 +6,10 @@
      id="foo"
      name="bar"
      onChange={[Function onChange]}
      required={false}
      type="checkbox"
-     value="qux"
    />
    <CheckboxLabelStyle
      htmlFor="foo"
      onClick={[Function anonymous]}
      onKeyPress={[Function anonymous]}
`;

exports[`CheckBox must return the diff between snapshot when checkbox is required or optionnal 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -4,11 +4,11 @@
      checked={false}
      hidden={true}
      id="foo"
      name="bar"
      onChange={[Function onChange]}
-     required={true}
+     required={false}
      type="checkbox"
    />
    <CheckboxLabelStyle
      htmlFor="foo"
      onClick={[Function anonymous]}
`;
